--- a/public/web/css/styles.css
+++ b/public/web/css/styles.css
@@ -11,3 +11,23 @@ color:black;
 -webkit-box-shadow: 1px 3px 19px -1px rgba(215, 215, 215, 0.65);
 -moz-box-shadow: 1px 3px 19px -1px rgba(0,0,0,0.65);
 }
+
+.size-souscrire{
+    font-size:20px;
+    margin-left:-2px;
+    padding-left:30px;
+    padding-right:30px;
+    background-color:#004D8A;
+    border:1px solid #004D8A;
+    color:white;
+}
+
+.btn-souscrire:hover{
+    font-size:20px;
+    margin-left:-2px;
+    padding-left:30px;
+    padding-right:30px;
+    background-color:#004D8A;
+    border:1px solid black;
+    color:white;
+}
