--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -23,36 +23,7 @@
     
 <!-- Header Start --> 
 
-<header class="navigation">
-	
-	<nav class="navbar navbar-expand-lg  " id="navbar" >
-		<div class="container" style="max-width: 1320px;">
-		  <a class="navbar-brand" href="">
-		  	<img src="../web/img/logo-xs.png" style="width:30px;;height:35px;margin-right:10px;" /> <span style="color:#370274;">NovHotel</span>
-		  </a>
-
-		  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="fa fa-bars"></span>
-		  </button>
-	  
-		  <div class="collapse navbar-collapse text-center" id="navbarsExample09">
-			<ul class="navbar-nav ml-auto">
-			  <li class="nav-item active">
-				<a class="nav-link size-space" href="">Besoin d'aide?</a>
-			  </li>
-			   <li class="nav-item size-space"><a class="nav-link" href="">Nos chambres</a></li>
-			   <li class="nav-item size-space"><a class="nav-link" href="">FR | EN</a></li>
-			   
-			   <li class="nav-item"><a class="nav-link" href="">Se connecter</a></li>
-         <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-align-justify" style="margin-left:15px;font-size:20px;margin-top:4px;"></i></a></li>
-			</ul>
-
-	
-		  </div>
-		</div>
-	</nav>
-</header>
-
+{% embed '/front/menu.html.twig' %}{% endembed %}
 <!-- Header Close --> 
 
 
@@ -189,33 +160,9 @@
 
   </div>
   </div>
-  <div class="row">
-      <div class="col-md-12">
-          <div style="color:white;border:1px solid grey;padding-top:140px;padding-bottom:100px;padding-left:100px;padding-right:100px;background-color:#370274;">
-              <div class="row">
-                  <div class="col-md-7">
-                  <div class="border:1px solid white;">
-                  <ul style="list-style-type:none;margin-left:-40px;">
-                      <li><img src="../web/img/logo.png" style="width:100px;height:140px;margin-left:19px;" /><li>
-                      <li><span style="font-size:35px;">NovHotel</span></li>
-                  </ul>
-                  </div>
-                  </div>
-                  <div class="col-md-5">
-                  <div style="">
-                      <form>
-                      <label style="font-size:35px;font-weight:bold;margin-bottom:40px;" for="email">Souscrivez à notre Newsletter</label>
-                      <div class="input-group">
-                              <input type="text" class="form-control-lg" placeholder="" id="email" style="border:0px solid transparent;">
-                              <div class="input-group-append"><span class="input-group-text size-souscrire" style="">Souscrire</span></div>
-                         </div>
-                      </form>
-                  </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
+
+  {% embed '/front/footer.html.twig' %}{% endembed %}
+      
 
   </div>
    </body>
