--- a/templates/front/content.html.twig
+++ b/templates/front/content.html.twig
@@ -10,7 +10,9 @@
 	</div>
 </section>
 
-<section class="mt-70 position-relative" style="margin-top:-110px;">
+<section class="mt-70 position-relative" style="margin-top:-254px;">
+<div style="font-size:70px;font-weight:bold;color:white;margin-left:250px;margin-bottom:-6px;">Bienvenu chez vous !</div>
+<div style="color:white;margin-left:250px;font-weight:bold;margin-bottom:20px;">DEMARRER UNE RESERVATION</div>
 	<div class="size-border" style="margin-left:250px;margin-right:250px;background-color:white;border-radius:10px;padding-top:40px;padding-bottom:30px;padding-left:90px;">
 	    <div class="row">
 		    <div class="col-md-8">
@@ -113,11 +115,11 @@
           <div class="col-md-4">
               <div class="size-border" style="position:relative;border-radius:10px;margin-bottom:10px;">
                   <a href=""><span class="btn btn-primary btn-sm" style="position:absolute;top:20px;left:20px;border-radius:30px;background-color:white;border:1px solid white;padding-top:15px;padding-bottom:15px;padding-left:16px;padding-right:16px;"><i class="fa fa-heart-o" style="color:#004D8A;font-size:20px;"></i></span></a>
-                  <img src="../web/img/img_2.png" style="width:100%;height:190px;">
+                  <a class="nav-link" href="{{ path('front_actualite_chambre') }}" style="padding:0px;"><img src="../web/img/img_2.png" style="width:100%;height:190px;"></a>
                   
                                 <div class="" style="padding:20px;">
                                         <div style="color:#c4c4c4;margin-top:-10px;"><span><img src="../web/img/e.png" style="width:16px;height:20px;margin-right:15px;"></span> <span style="font-size:15px;">ASSINIE, Ivory Cost</span><span style="margin-left:65px;color:#004D8A;font-size:14px;">Luxury Villa</span></div>
-                                        <div style="margin-top:0px;"><span style="font-size:40px;font-weight:bold;">250 000</span><span style="margin-left:5px;color:#c4c4c4;"><span style="color:black;font-size:12px;font-weight:bold;margin-bottom:30px;">Fcfa</span><span style="font-size:12px;"> / nuitée en semaine</span></span></div>
+                                        <div style="margin-top:0px;"><span style="font-size:40px;font-weight:bold;">250 000</span><span style="margin-left:5px;color:#c4c4c4;"><span style="color:black;font-size:12px;font-weight:bold;top:-20px;position:relative;">Fcfa</span><span style="font-size:12px;"> / nuitée en semaine</span></span></div>
                                         <div style="font-size:30px;">NovHotel Royal Suite</div>
                                             <div>
                                                   <ul style="list-style-type:none;margin-left:-40px;">
@@ -134,11 +136,11 @@
           <div class="col-md-4">
               <div class="size-border" style="position:relative;border-radius:10px;margin-bottom:10px;">
                   <a href=""><span class="btn btn-primary btn-sm" style="position:absolute;top:20px;left:20px;border-radius:30px;background-color:white;border:1px solid white;padding-top:15px;padding-bottom:15px;padding-left:16px;padding-right:16px;"><i class="fa fa-heart-o" style="color:#004D8A;font-size:20px;"></i></span></a>
-                  <img src="../web/img/img_2.png" style="width:100%;height:190px;">
+                  <a class="nav-link" href="{{ path('front_actualite_chambre') }}" style="padding:0px;"><img src="../web/img/img_2.png" style="width:100%;height:190px;"></a>
                   
                                 <div class="" style="padding:20px;">
                                         <div style="color:#c4c4c4;margin-top:-10px;"><span><img src="../web/img/e.png" style="width:16px;height:20px;margin-right:15px;"></span> <span style="font-size:15px;">ASSINIE, Ivory Cost</span><span style="margin-left:65px;color:#004D8A;font-size:14px;">Luxury Villa</span></div>
-                                        <div style="margin-top:0px;"><span style="font-size:40px;font-weight:bold;">250 000</span><span style="margin-left:5px;color:#c4c4c4;"><span style="color:black;font-size:12px;font-weight:bold;margin-bottom:30px;">Fcfa</span><span style="font-size:12px;"> / nuitée en semaine</span></span></div>
+                                        <div style="margin-top:0px;"><span style="font-size:40px;font-weight:bold;">250 000</span><span style="margin-left:5px;color:#c4c4c4;"><span style="color:black;font-size:12px;font-weight:bold;margin-bottom:30px;top:-20px;position:relative;">Fcfa</span><span style="font-size:12px;"> / nuitée en semaine</span></span></div>
                                         <div style="font-size:30px;">NovHotel Royal Suite</div>
                                             <div>
                                                   <ul style="list-style-type:none;margin-left:-40px;">
@@ -155,11 +157,11 @@
           <div class="col-md-4">
               <div class="size-border" style="position:relative;border-radius:10px;margin-bottom:10px;">
                   <a href=""><span class="btn btn-primary btn-sm" style="position:absolute;top:20px;left:20px;border-radius:30px;background-color:white;border:1px solid white;padding-top:15px;padding-bottom:15px;padding-left:16px;padding-right:16px;"><i class="fa fa-heart-o" style="color:#004D8A;font-size:20px;"></i></span></a>
-                  <img src="../web/img/img_2.png" style="width:100%;height:190px;">
+                  <a class="nav-link" href="{{ path('front_actualite_chambre') }}" style="padding:0px;"><img src="../web/img/img_2.png" style="width:100%;height:190px;"></a>
                   
                                 <div class="" style="padding:20px;">
                                         <div style="color:#c4c4c4;margin-top:-10px;"><span><img src="../web/img/e.png" style="width:16px;height:20px;margin-right:15px;"></span> <span style="font-size:15px;">ASSINIE, Ivory Cost</span><span style="margin-left:65px;color:#004D8A;font-size:14px;">Luxury Villa</span></div>
-                                        <div style="margin-top:0px;"><span style="font-size:40px;font-weight:bold;">250 000</span><span style="margin-left:5px;color:#c4c4c4;"><span style="color:black;font-size:12px;font-weight:bold;margin-bottom:30px;">Fcfa</span><span style="font-size:12px;"> / nuitée en semaine</span></span></div>
+                                        <div style="margin-top:0px;"><span style="font-size:40px;font-weight:bold;">250 000</span><span style="margin-left:5px;color:#c4c4c4;"><span style="color:black;font-size:12px;font-weight:bold;margin-bottom:30px;top:-20px;position:relative;">Fcfa</span><span style="font-size:12px;"> / nuitée en semaine</span></span></div>
                                         <div style="font-size:30px;">NovHotel Royal Suite</div>
                                             <div>
                                                   <ul style="list-style-type:none;margin-left:-40px;">
