--- a/templates/front/description.html.twig
+++ b/templates/front/description.html.twig
@@ -24,9 +24,9 @@
 <div style="border:1px solid #d3d3d3;padding-left:17px;padding-right:17px;padding-top:13px;padding-bottom:13px;border-radius:5px;margin-top:5px;">
 <img src="../web/img/ok.png" style="width:20px;height:20px;"> <span style="margin-right:5px;margin-left:12px;">Enregistrement</span> <img src="../web/img/play.png" style="width:10px;height:11px;"> <span style="margin-left:10px;">Vérification</span>
 </div>
-<div style="border:1px solid #d3d3d3;background-color:#370274;text-align:center;font-weight:bold;color:white;padding-left:17px;padding-right:17px;padding-top:13px;padding-bottom:13px;border-radius:5px;margin-top:25px;">
+<a href=""><div style="border:1px solid #d3d3d3;background-color:#370274;text-align:center;font-weight:bold;color:white;padding-left:17px;padding-right:17px;padding-top:13px;padding-bottom:13px;border-radius:5px;margin-top:25px;">
 <span style="margin-right:5px;margin-left:12px;">Réserver maintenant</span>
-</div>
+</div></a>
 <div style="margin-top:25px;text-align:center;">Ou contactez-nous : <span style="color:#264f8d;font-weight:bold;">+225 07 00 00 00 00</span></div>
 <hr style="margin-top:30px;">
 <div style="margin-top:25px;">
@@ -229,6 +229,40 @@ créer des expériences spécialement pour vous.
 <div style="font-size:35px;margin-top:80px;font-weight:bold;"><span>ils ont séjourné chez nous</span></div>
 <div style="margin-top:25px;">Découvrez ce que nos clients ont pensé de leurs vacances avec Sankofa. Aujourd’hui, nous sommes fiers d’avoir le taux de satisfaction le plus élevé de notre industrie.
 </div>
+
+<div style="margin-top:50px;margin-left:170px;margin-right:10px;">
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="../web/img/i.png" style="width:30px;;height:25px;" /> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut 
+	  labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd… <img src="../web/img/i.png" style="width:30px;;height:25px;" />
+    </div>
+    <div class="carousel-item">
+      <img src="../web/img/i.png" style="width:30px;;height:25px;" /> Consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 
+	  sed diam voluptua. At vero eos et accusam et Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
+	  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At 
+	  vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd… <img src="../web/img/i.png" style="width:30px;;height:25px;" />
+    </div>
+    <div class="carousel-item">
+      <img src="../web/img/i.png" style="width:30px;;height:25px;" /> Dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod Lorem ipsum dolor sit amet, consetetur 
+	  sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 
+	  sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd… <img src="../web/img/i.png" style="width:30px;;height:25px;" />
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true" style="background-color:grey;border-radius:20px;padding:20px;box-shadow:-1px 3px 8px 4px rgba(0,0,0,0.9);"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true" style="background-color:grey;border-radius:20px;padding:20px;box-shadow:-1px 3px 8px 4px rgba(0,0,0,0.9);"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<div style="margin-left:280px;margin-top:30px;"><span>Darius Boti</span><span style="color:#370274;">à séjourné pendant ses vacances</span></div>
+
+</div>
+
+
 </div>
 
 </div>
