--- a/templates/front/content.html.twig
+++ b/templates/front/content.html.twig
@@ -81,7 +81,7 @@
   <div style="padding:10px;margin-right:140px;">
   <p style="font-size:50px;">
   <span style="color:#c4bfbf;">A propos de</span><br>
-  <span>NovHotel Royal Suites</span>
+  <span>NovHôtel Royal Suites</span>
   </p>
   <p>Mensarum enim voragines et varias voluptatum inlecebras, ne longius progrediar, praete rmitto illuc prae
   transiturus quod quidam per ampla spatia urbis subversasque silices sine periculi metu properantes equos prae
@@ -120,7 +120,7 @@
                                 <div class="" style="padding:20px;">
                                         <div style="color:#c4c4c4;margin-top:-10px;"><span><img src="../web/img/e.png" style="width:16px;height:20px;margin-right:15px;"></span> <span style="font-size:15px;">ASSINIE, Ivory Cost</span><span style="margin-left:65px;color:#004D8A;font-size:14px;">Luxury Villa</span></div>
                                         <div style="margin-top:0px;"><span style="font-size:40px;font-weight:bold;">250 000</span><span style="margin-left:5px;color:#c4c4c4;"><span style="color:black;font-size:12px;font-weight:bold;top:-20px;position:relative;">Fcfa</span><span style="font-size:12px;"> / nuitée en semaine</span></span></div>
-                                        <div style="font-size:30px;">NovHotel Royal Suite</div>
+                                        <div style="font-size:30px;">NovHôtel Royal Suite</div>
                                             <div>
                                                   <ul style="list-style-type:none;margin-left:-40px;">
                                                     <li style="margin-top:11px;"><img src="../web/img/d.png" style="width:20px;height:20px;margin-right:15px;" /> 12 personnes</li>
@@ -141,7 +141,7 @@
                                 <div class="" style="padding:20px;">
                                         <div style="color:#c4c4c4;margin-top:-10px;"><span><img src="../web/img/e.png" style="width:16px;height:20px;margin-right:15px;"></span> <span style="font-size:15px;">ASSINIE, Ivory Cost</span><span style="margin-left:65px;color:#004D8A;font-size:14px;">Luxury Villa</span></div>
                                         <div style="margin-top:0px;"><span style="font-size:40px;font-weight:bold;">250 000</span><span style="margin-left:5px;color:#c4c4c4;"><span style="color:black;font-size:12px;font-weight:bold;margin-bottom:30px;top:-20px;position:relative;">Fcfa</span><span style="font-size:12px;"> / nuitée en semaine</span></span></div>
-                                        <div style="font-size:30px;">NovHotel Royal Suite</div>
+                                        <div style="font-size:30px;">NovHôtel Royal Suite</div>
                                             <div>
                                                   <ul style="list-style-type:none;margin-left:-40px;">
                                                     <li style="margin-top:11px;"><img src="../web/img/d.png" style="width:20px;height:20px;margin-right:15px;" /> 12 personnes</li>
@@ -162,7 +162,7 @@
                                 <div class="" style="padding:20px;">
                                         <div style="color:#c4c4c4;margin-top:-10px;"><span><img src="../web/img/e.png" style="width:16px;height:20px;margin-right:15px;"></span> <span style="font-size:15px;">ASSINIE, Ivory Cost</span><span style="margin-left:65px;color:#004D8A;font-size:14px;">Luxury Villa</span></div>
                                         <div style="margin-top:0px;"><span style="font-size:40px;font-weight:bold;">250 000</span><span style="margin-left:5px;color:#c4c4c4;"><span style="color:black;font-size:12px;font-weight:bold;margin-bottom:30px;top:-20px;position:relative;">Fcfa</span><span style="font-size:12px;"> / nuitée en semaine</span></span></div>
-                                        <div style="font-size:30px;">NovHotel Royal Suite</div>
+                                        <div style="font-size:30px;">NovHôtel Royal Suite</div>
                                             <div>
                                                   <ul style="list-style-type:none;margin-left:-40px;">
                                                     <li style="margin-top:11px;"><img src="../web/img/d.png" style="width:20px;height:20px;margin-right:15px;" /> 12 personnes</li>
