--- a/templates/front/description.html.twig
+++ b/templates/front/description.html.twig
@@ -16,7 +16,7 @@
 
 <div class="col-md-4">
 <div style="border:1px solid #d3d3d3;background-color:white;padding:25px;border-radius:5px;position:absolute;top:-370px;left:1000px;margin-right:-900px;;z-index:10;">
-<div style="font-size:30px;"><span style="font-weight:bold;">NovHotel</span> Royal Suites</div>
+<div style="font-size:30px;"><span style="font-weight:bold;">NovHôtel</span> Royal Suites</div>
 <div>Luxury Villa</div>
 <div>Assinie, Ivory Cost</div>
 <div style="font-weight:bold;margin-top:15px;">A partir De 12 000 000 / Semaine</div>
@@ -37,7 +37,7 @@
 
 <div class="col-md-4">
 <div style="border:1px solid #d3d3d3;background-color:white;padding:25px;border-radius:5px;position:absolute;top:151px;left:985px;right:65px;z-index:1; position: fixed;">
-<div style="font-size:30px;"><span style="font-weight:bold;">NovHotel</span> Royal Suites</div>
+<div style="font-size:30px;"><span style="font-weight:bold;">NovHôtel</span> Royal Suites</div>
 <div>Luxury Villa</div>
 <div>Assinie, Ivory Cost</div>
 <div style="font-weight:bold;margin-top:15px;">A partir De 12 000 000 / Semaine</div>
@@ -60,7 +60,7 @@
 <div class="row">
 <div class="col-md-7">
 <div style="padding:10px;margin-left:73px;margin-top:30px;margin-right:-60px;">
-<div style="font-size:50px;"><span>NovHotel Royal Suites</span></div>
+<div style="font-size:50px;"><span>NovHôtel Royal Suites</span></div>
 <div><span>Luxury Villa</span></div>
 <div><span>Ivory Cost</span></div>
 <div style="margin-top:10px;"><span style="margin-right:40px;"><img src="../web/img/d.png" style="width:25px;height:30px;margin-right:15px;" /> 12 personnes</span>
