--- a/templates/front/description.html.twig
+++ b/templates/front/description.html.twig
@@ -258,7 +258,7 @@ créer des expériences spécialement pour vous.
     <span class="sr-only">Next</span>
   </a>
 </div>
-<div style="margin-left:280px;margin-top:30px;"><span>Darius Boti</span><span style="color:#370274;">à séjourné pendant ses vacances</span></div>
+<div style="margin-left:280px;margin-top:30px;margin-bottom:130px;"><span>Darius Boti</span><span style="color:#370274;">à séjourné pendant ses vacances</span></div>
 
 </div>
 
