--- a/templates/admin/main-sidebar.html.twig
+++ b/templates/admin/main-sidebar.html.twig
@@ -2,7 +2,7 @@
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="index.html" class="site_title"><i class="fa fa-gamepad"></i> <span>Gaming Info!</span></a>
+              <a href="index.html" class="site_title"><i class="fa fa-gamepad"></i> <span>Novate Dashboard!</span></a>
             </div>
 
             <div class="clearfix"></div>
@@ -26,7 +26,7 @@
               <div class="menu_section">
                 <h3>General</h3>
                 <ul class="nav side-menu">
-                  <li><a><i class="fa fa-home"></i> Actualité <span class="fa fa-chevron-down"></span></a>
+                  <li><a><i class="fa fa-home"></i> Actualité Novate<span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                       <li><a href="{{ path('admin_actualite_new') }}">Ajouter</a></li>
                       <li><a href="{{ path('admin_actualite_list') }}">Liste</a></li>
